build/log/idf_py_stdout_output_42553
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/tennis/src/test-squawk/build/bootloader/esp-idf/esptool_py && /Users/tennis/.espressif/python_env/idf5.3_py3.13_env/bin/python /Users/tennis/esp/esp-idf-v5.3.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/tennis/src/test-squawk/build/bootloader/bootloader.bin
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/test-squawk.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/test-squawk.c.obj 
/Users/tennis/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/tennis/src/test-squawk/build/config -I/Users/tennis/src/test-squawk/main -I/Users/tennis/esp/esp-idf-v5.3.1/components/newlib/platform_include -I/Users/tennis/esp/esp-idf-v5.3.1/components/freertos/config/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/freertos/config/include/freertos -I/Users/tennis/esp/esp-idf-v5.3.1/components/freertos/config/xtensa/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/tennis/esp/esp-idf-v5.3.1/components/freertos/esp_additions/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_hw_support/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_hw_support/include/soc -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_hw_support/include/soc/esp32s3 -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_hw_support/dma/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_hw_support/ldo/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_hw_support/port/esp32s3/. -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_hw_support/port/esp32s3/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/heap/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/log/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/soc/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/soc/esp32s3 -I/Users/tennis/esp/esp-idf-v5.3.1/components/soc/esp32s3/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/hal/platform_port/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/hal/esp32s3/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/hal/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_rom/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_rom/include/esp32s3 -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_rom/esp32s3 -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_common/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_system/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_system/port/soc -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_system/port/include/private -I/Users/tennis/esp/esp-idf-v5.3.1/components/xtensa/esp32s3/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/xtensa/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/xtensa/deprecated_include -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/include/apps -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/include/apps/sntp -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/lwip/src/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/port/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/port/freertos/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/port/esp32xx/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/arch -I/Users/tennis/esp/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/sys -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_driver_i2s/include -I/Users/tennis/esp/esp-idf-v5.3.1/components/esp_driver_gpio/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/tennis/src/test-squawk=. -fmacro-prefix-map=/Users/tennis/esp/esp-idf-v5.3.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/test-squawk.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/test-squawk.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/test-squawk.c.obj -c /Users/tennis/src/test-squawk/main/test-squawk.c
/Users/tennis/src/test-squawk/main/test-squawk.c: In function 'squawk':
/Users/tennis/src/test-squawk/main/test-squawk.c:102:9: error: the address of 'squawk_mp3' will always evaluate as 'true' [-Werror=address]
  102 |     if (!squawk_mp3 || squawk_mp3_len == 0) {
      |         ^
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
